# parquet_consolidator

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  build.sh  examples.sh  test.sh
src/: consolidator.rs  lib.rs  main.rs  test_data_generator.rs  test_runner.rs  test_utils.rs
tests/: benchmark_tests.rs  integration_tests.rs  property_tests.rs
