[package]
name = "parquet_consolidator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parquet_consolidator"
path = "src/main.rs"

[[bin]]
name = "test_data_generator"
path = "src/test_data_generator.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
arrow = "53.0"
parquet = "53.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.3"
